tests/fixtures/fail/coalesce_non_container_lhs.sc
let main(): i32 = 40 ?? 2
